--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,15 @@
     "builds": [
         {
             "src": "src/main.ts",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "outputDirectory": "public"
 
         }
 ],
     "routes": [
         {
             "src": "/{.*}",
-            "dest": "src/main.ts",
+            "dest": "public/main.ts",
             "methods": [
                 "GET",
                 "POST",
